--- a/unit.css
+++ b/unit.css
@@ -9,16 +9,18 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-	background: rgb(161, 196, 202);
+	background: rgb(71, 98, 76);
 	padding: 20px;
 }
 .container {
+	
+	text-align: center;
 	padding: 32px;
 	border-radius: 20px;
 	max-width: 400px;
 	width: 100%;
-	background: #fff;
-	box-shadow: 20px 20px 40px rgba(0,0,0,0.08), -8px -8px 16px rgba(0,0,0,0.1) inset;
+	background: #ffffff;
+	box-shadow: 50px 50px 90px rgba(0,0,0,0.08), -8px -8px 16px rgba(0,0,0,0.1) inset;
 }
 .title {
 	text-align: center;
